@@ -1,0 +1,1 @@
+PKG_CFLAGS = $(C_VISIBILITY)
