@@ -1,5 +1,14 @@
 * CHANGES IN dplR VERSION 1.6.6
 
+Files: NAMESPACE, src/..., R/...
+----------------
+
+- Technical change: Native routines are registered.
+  <https://stat.ethz.ch/pipermail/r-devel/2017-February/073755.html>
+
+- Technical change: Visibility of native routines has been
+  limited, following 6.15 "Controlling visibility" in R-exts.
+
 File: sfrcs.R
 ----------------
 
